--- a/src/task-03.html
+++ b/src/task-03.html
@@ -13,6 +13,25 @@
         color: #424242;
         line-height: 1.5;
       }
+
+      img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            }
+
+      #gallery {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); 
+            gap: 15px;
+            padding-left: 0;
+            list-style: none;
+            }
+
+      .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            }
     </style>
   </head>
   <body>
